# AIR_robots_sim

./: AIR-ur5-simulation.pptx  Hanoi_A_star.py  Hanoi_sim.py  MANIFEST.in  README.md  __setup.py  _setup.cfg_  pyproject.toml  requirements.txt  setup.py
abstract_motion_planner/: abstract_motion_planner.py
lab_ur5/: lab_implementation.py
lab_ur5/camera/: camera_params.json  configurations_and_params.py  realsense_camera.py  save_params_from_camera.py  stream_rgb_depth_beautiful.py  utils.py
lab_ur5/camera/calibration/: cv2_calibration.py  get_images_for_calibration.py
lab_ur5/experiments/collecting/: collect_images_of_states_dirty.py
lab_ur5/experiments/processing/: object_detection_cropped_images.py  object_detection_no_depth.py
lab_ur5/manipulation/: manipulation_controller.py  utils.py
lab_ur5/motion_planning/: geometry_and_transforms.py  klampt_world.xml  motion_planner.py  test_transofmrs.py
lab_ur5/robot_inteface/: robot_interface.py  robots_metadata.py  test_interfaces.py  twofg7_gripper.py
lab_ur5/scripts/: align_two_robots.py  camera_model_validation.py  collect_blocks_with_vision.py  continous_detection_camera.py  draw_workspace.py  make_automation.py  measure_weight.py  move_while_recording.py  print_ee_pose.py  render_box_positions.py  sample_sensing_configurations.py  save_configs.py  sense_height.py  test_motion_planning_on_robot.py  test_pick_up_with_offset.py
lab_ur5/utils/: logging_util.py  workspace_utils.py
lab_ur5/vision/: generate_merged_data.py  image_block_position_estimator.py  object_detection.py  state_renderer.py  utils.py
sim_ur5/: MJDATA.TXT  __init__.py  sim_testing.py
sim_ur5/motion_planning/: configurations.py  klampt_world.xml  motion_executor.py  pid_controller.py  simulation_motion_planner.py
sim_ur5/mujoco_env/: __init__.py  milestones.py  mujoco_env.py  sim_env.py
sim_ur5/utils/: Hanoi_solve.py  logging_util.py
vision/: image_block_position_estimator.py  object_detection.py  state_renderer.py  utils.py
(+36 files in other folders)
