[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"  
  
[project]  # defines all the package metadata
dynamic = ["dependencies"]  # metadata to be read from a file or the package itself (see [tool.setuptools.dynamic])
name = "air2025"
authors = [  
    { name = "Shiran Dapht", email = "shiran96@campus.technion.ac.il" },  
    { name = "Sarah Keren", email = "sarahk@technion.ac.il" },  
]  
description = "AIR 2024"  
keywords = ["Foundation Models", "Artificial Intelligence", "3D", "Benchmarking"]  #TODO
readme = "README.md"  
requires-python = ">= 3.10"  
classifiers = [  
    "Development Status :: 4 - Beta",  
    "Programming Language :: Python"  
]  

[project.urls]
Repository = "https://github.com/CLAIR-LAB-TECHNION/AIR_robots_sim" 
  
[tool.setuptools.dynamic]
version = "0.0.0"  
dependencies = { file = ["requirements.txt"] }  
  
[tool.setuptools.packages.find]  
include = ['sim_ur5', 'motion_planner']  
