[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"  
  
[project]  # defines all the package metadata
dynamic = ["dependencies"]  # metadata to be read from a file or the package itself (see [tool.setuptools.dynamic])
name = "air2025"
version = "0.0.0"
authors = [  
    { name = "Shiran Dapht", email = "shiran96@campus.technion.ac.il" },  
    { name = "Sarah Keren", email = "sarahk@technion.ac.il" },  
]  
description = "AIR 2024"  
keywords = ["MuJoCo", "UR5E", "3D"]
readme = "README.md"  
requires-python = ">= 3.10"  
classifiers = [  
    "Development Status :: 4 - Beta",  
    "Programming Language :: Python :: 3.10"  
]  

[project.urls]
Repository = "https://github.com/CLAIR-LAB-TECHNION/AIR_robots_sim.git" 
  
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }  
  
[tool.setuptools.packages.find]  
include = ['sim_ur5', 'motion_planner']  
